# flappy

./: .gitignore  CMakeLists.txt
include/: Bird.hpp  Game.hpp  Pipe.hpp  settings.hpp
src/: bird.cpp  game.cpp  main.cpp  pipe.cpp
